--- a/src/css/postcard.module.css
+++ b/src/css/postcard.module.css
@@ -4,22 +4,27 @@
   padding: 1rem;
   text-align: center;
 }
+
 .info {
   padding: 1rem 0;
 }
+
 .info h2 {
   font-size: 30px;
   text-transform: capitalize;
   margin-bottom: 10px;
 }
+
 .info h6 {
   color: var(--darkGrey);
   text-transform: capitalize;
 }
+
 .info p {
   padding: 20px 0 30px 0;
   text-align: left;
 }
+
 .link {
   border: 1px solid var(--mainBlack);
   padding: 4px 8px;
@@ -29,6 +34,7 @@
   text-transform: capitalize;
   transition: all 0.3s ease-in-out;
 }
+
 .link:hover {
   background: var(--mainBlack);
   color: var(--mainWhite);
@@ -42,12 +48,15 @@
     display: grid;
     grid-template-columns: 350px 1fr;
   }
+
   .info {
     display: flex;
     align-items: center;
     padding: 0 1.5rem;
   }
-  .image > div {
+
+  /* > div means direct child div */
+  .image>div {
     height: 250px;
   }
 }
